--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "vue": "^2.0.1",
-    "vue-router": "^3.5.1"
+    "vue-resource": "^1.5.2",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
